# meet-fast-mcp

./: README.md  pyproject.toml
gmeet/: google_auth.py  meet_server.py
